# btx_lib_mail

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ai-transparency.md  concept.md  pyproject.toml  reset_git_history.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: api.md  attachment-security.md  cli.md  configuration.md  installation.md  streaming.md
docs/systemdesign/: module_reference.md
notebooks/: Quickstart.ipynb
scripts/: cli.py  typed_click.py
skills/python-send-mail/: SKILL.md
src/btx_lib_mail/: __init__.py  __init__conf__.py  __main__.py  behaviors.py  cli.py  lib_mail.py
tests/: conftest.py  test_behaviors.py  test_cli.py  test_lib_mail.py  test_module_entry.py  test_streaming.py
